--- a/NaviBar/app/src/main/res/values/strings.xml
+++ b/NaviBar/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="explore">Explore Page</string>
 
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="event_name">Mr. Bean</string>
+    <string name="event_description">Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....</string>
+    <string name="event_date">2018-10-10</string>
+
 </resources>
