--- a/NaviBar/app/src/main/res/values/strings.xml
+++ b/NaviBar/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="event_description">Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....</string>
     <string name="event_date">2018-10-10</string>
 
+    <string name="twitter_consumer_key" translatable="false">riVQO4XGOSDVQOlVC452KOQJA</string>
+    <string name="twitter_consumer_secret" translatable="false">PqlE1QGltlR2OuK996PJJypwDKk4FxDBanSorjIGOCJ7dFuRTJ</string>
+    <string name="loading">Loading...</string>
+    <string name="cannot_get_email">Cannot retrieve user email. please try other Sign-in options.</string>
+    <string name="facebook_app_id">2102038940033779</string>
+    <string name="fb_login_protocol_scheme">fb2102038940033779</string>
+
 </resources>
