--- a/NaviBar/app/src/main/res/values/strings.xml
+++ b/NaviBar/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="facebook_app_id">2102038940033779</string>
     <string name="fb_login_protocol_scheme">fb2102038940033779</string>
 
+    <string name="banner_ad_unit_id">ca-app-pub-4149307760842545/7262330703</string>
+
 </resources>
