--- a/NaviBar/app/src/main/res/values/strings.xml
+++ b/NaviBar/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">BUGlobalMusicFestival</string>
     <string name="title_explore">Explore</string>
-    <string name="title_like">Like</string>
+    <string name="title_like">Liked</string>
     <string name="title_schedule">Schedule</string>
     <string name="title_map">Map</string>
     <string name="title_profile">Profile</string>
@@ -10,7 +10,10 @@
     <string name="explore">Explore Page</string>
 
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="unlike_check">Are you sure you want to remove </string>
+    <string name="question_mark">\?</string>
+    <string name="txtEmptyLike">Start adding your favorite music events! Tap the heart on any event page to start saving your favorites here.</string>
+
     <string name="event_name">Mr. Bean</string>
     <string name="event_description">Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....Mr. Bean is a British sitcom created by Rowan Atkinson and ....</string>
     <string name="event_date">2018-10-10</string>
