update font and color

--- a/NaviBar/app/src/main/res/values/strings.xml
+++ b/NaviBar/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="mission">The BU Global Music Festival is annual celebration of musical cultures around the world featuring high-caliber, international artists as well as vibrant local musical communities, bringing the wider musical world to the doorstep of thousands of students, adults, young people, and families throughout the Boston area.</string>
     <string name="member">Thanks to Sponsors...</string>
     <string name="contacttitle">Contact</string>
-    <string name="BUArts">Boston University Arts Initiative\n775 Commonwealth Avenue, Suite 201\n\nPhone:   +1 617.358.0489\nEmail: artsinbu@bu.edu\nWebsite:   www.bu.edu/gmf</string>
+    <string name="BUArts">Boston University Arts Initiative\n775 Commonwealth Avenue, Suite 201\n\n<b>Phone:   </b>+1 617.358.0489\n<b>Email: </b>artsinbu@bu.edu\n<b>Website:   </b>www.bu.edu/gmf</string>
 
 
     <!--Ad Banner Strings-->
